--- a/01_AutomationTest_Learn_V0.1/Utilities/UiBank/WFs/UIBank_ApplyLoan.xaml
+++ b/01_AutomationTest_Learn_V0.1/Utilities/UiBank/WFs/UIBank_ApplyLoan.xaml
@@ -45,32 +45,34 @@
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
     <scg:List x:TypeArguments="AssemblyReference" Capacity="40">
-      <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
-      <AssemblyReference>System.Private.CoreLib</AssemblyReference>
+      <AssemblyReference>System</AssemblyReference>
+      <AssemblyReference>System.Activities</AssemblyReference>
+      <AssemblyReference>System.Collections</AssemblyReference>
+      <AssemblyReference>System.ComponentModel</AssemblyReference>
+      <AssemblyReference>System.ComponentModel.TypeConverter</AssemblyReference>
+      <AssemblyReference>System.Configuration.ConfigurationManager</AssemblyReference>
+      <AssemblyReference>System.Console</AssemblyReference>
+      <AssemblyReference>System.Core</AssemblyReference>
       <AssemblyReference>System.Data</AssemblyReference>
       <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
-      <AssemblyReference>System</AssemblyReference>
       <AssemblyReference>System.Drawing</AssemblyReference>
-      <AssemblyReference>System.Core</AssemblyReference>
+      <AssemblyReference>System.Linq</AssemblyReference>
+      <AssemblyReference>System.Memory</AssemblyReference>
+      <AssemblyReference>System.ObjectModel</AssemblyReference>
+      <AssemblyReference>System.Private.CoreLib</AssemblyReference>
+      <AssemblyReference>System.Private.Uri</AssemblyReference>
+      <AssemblyReference>System.Reflection.DispatchProxy</AssemblyReference>
+      <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
+      <AssemblyReference>System.Reflection.TypeExtensions</AssemblyReference>
+      <AssemblyReference>System.Security.Permissions</AssemblyReference>
+      <AssemblyReference>System.Xaml</AssemblyReference>
       <AssemblyReference>System.Xml</AssemblyReference>
       <AssemblyReference>System.Xml.Linq</AssemblyReference>
-      <AssemblyReference>System.Xaml</AssemblyReference>
-      <AssemblyReference>UiPath.System.Activities</AssemblyReference>
-      <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
       <AssemblyReference>UiPath.Studio.Constants</AssemblyReference>
+      <AssemblyReference>UiPath.System.Activities</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
-      <AssemblyReference>System.ObjectModel</AssemblyReference>
-      <AssemblyReference>System.Reflection.DispatchProxy</AssemblyReference>
-      <AssemblyReference>System.Reflection.TypeExtensions</AssemblyReference>
-      <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
-      <AssemblyReference>System.ComponentModel.TypeConverter</AssemblyReference>
-      <AssemblyReference>System.Console</AssemblyReference>
-      <AssemblyReference>System.Configuration.ConfigurationManager</AssemblyReference>
-      <AssemblyReference>System.Security.Permissions</AssemblyReference>
-      <AssemblyReference>System.ComponentModel</AssemblyReference>
-      <AssemblyReference>System.Memory</AssemblyReference>
-      <AssemblyReference>System.Private.Uri</AssemblyReference>
+      <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
       <AssemblyReference>UiPath.Workflow</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
@@ -136,24 +138,12 @@
               </sap:WorkflowViewStateService.ViewState>
               <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="UiBank_Loan.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="Utilities\UiBank\UiBank Framework\UiBank_Loan.xaml">
                 <ui:InvokeWorkflowFile.Arguments>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_Email">
-                    <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_UibankEmail" />
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_LoanAmount">
-                    <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_UibankLoanAmount" />
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_YearlyIncome">
-                    <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_UibankIncome" />
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_Age">
-                    <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_UibankAge" />
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_URL">
-                    <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_UiBank_URL" />
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_Term">
-                    <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_UibankTerm" />
-                  </InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_Email">[in_UibankEmail]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_LoanAmount">[in_UibankLoanAmount]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_YearlyIncome">[in_UibankIncome]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_Age">[in_UibankAge]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_URL">[in_UiBank_URL]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_Term">[in_UibankTerm]</InArgument>
                 </ui:InvokeWorkflowFile.Arguments>
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
